UGC card on main page

--- a/index.html
+++ b/index.html
@@ -186,6 +186,16 @@
         <div class="card-cta"><span>Journal</span></div>
       </a>
     </article>
+
+<!-- Card 8 -->
+    <article class="card">
+      <a class="card-link" href="https://yogawithlisaaiugcportfolio.my.canva.site/copy-of-copy-of-ugc-portfolio-neutral-theme">
+        <img class="card-img img-default" src="images/UGC-default.jpg" alt="UGC">
+        <img class="card-img img-hover"   src="images/UGC-hover.jpg"   alt="" aria-hidden="true">
+        <div class="card-cta"><span>Journal</span></div>
+      </a>
+    </article>
+
   </div>
 </section>
 
