--- a/yoga-ondemand.html
+++ b/yoga-ondemand.html
@@ -118,7 +118,7 @@ From energizing flows to restful resets, we’ve got you covered. Join our free 
   <div class="wellness-row" tabindex="0">
     <!-- Lift -->
     <article class="wellness-card">
-      <a class="poster" href="login.html">
+      <a class="poster" href="https://available-tarsal-b72.notion.site/Yoga-with-Lisa-Exclusive-Full-Content-Library-2c06b96c132180b398dbc1d20c6f81f5">
         <img src="images/lift.jpg" alt="Lift">
       </a>
       <div class="meta">
