UGC page update via Canva

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <a class="card-link" href="https://yogawithlisaaiugcportfolio.my.canva.site/copy-of-copy-of-ugc-portfolio-neutral-theme">
         <img class="card-img img-default" src="images/UGC-default.jpg" alt="UGC">
         <img class="card-img img-hover"   src="images/UGC-hover.jpg"   alt="" aria-hidden="true">
-        <div class="card-cta"><span>Journal</span></div>
+        <div class="card-cta"><span>UGC</span></div>
       </a>
     </article>
 
