Add button for Free Members Page - so they can join our mailing list

--- a/login.html
+++ b/login.html
@@ -93,9 +93,12 @@
         <div class="auth-grid">
           <!-- Left: Copy & Login -->
           <div>
-            <h1>Welcome ✨</h1>
+            <h1>Welcome back ✨</h1>
             <p class="lead">Log in to access member content, your class library, and your billing portal.</p>
 	<div class="plan-stack">
+
+<a class="btn btn-pill btn-dark btn-wide"
+   href="free-members.html">Join our Mailing List</a>
 
 <a class="btn btn-pill btn-dark btn-wide" 
    href="https://buy.stripe.com/bJefZi3fB4ICalL1de2Ji00">Subscribe Now | Monthly Plan – $16.99/mo</a>
