Add Subscribe feature for free-members

--- a/welcome.html
+++ b/welcome.html
@@ -41,7 +41,7 @@
       <a class="brand" href="index.html">yoga with lisa</a>     
       <nav class="main-nav" aria-label="Primary">
         <ul>
-          <li><a href="login.html" class="login-btn">LOGIN</a></li>
+          <li><a href="login.html" class="login-btn">WELCOME</a></li>
         </ul>
       </nav>
     </div>
@@ -55,11 +55,11 @@
 
     <div class="hero-inner">
       <h1 class="display">
-  	<span class="nowrap">Yoga <em>every</em> way.</span><br/>
-  	Yoga <em>every</em> day.  
+  	<span class="nowrap">Welcome <em>to the new</em> you.</span><br/>
+  	We're so happy <em>your</em> here.  
       </h1>
   <div class="hero-ctas">
-        <a class="btn btn-dark btn-pill" href="login.html">START YOUR FREE TRIAL TODAY</a>
+        <a class="btn btn-dark btn-pill" href="login.html">MANAGE YOUR MEMBERSHIP</a>
 <a class="btn btn-dark btn-pill btn-wide"
    href="https://join.slack.com/t/yogawithlisa/shared_invite/zt-3ftkru3hx-wlWSt1RYzyfNVIt0LK1HXA"
    target="_blank" rel="noopener">
@@ -71,9 +71,9 @@
 
   <!-- Minimal Intro -->
   <section class="intro container">
-    <h2>Find your flow here ✨</h2>
+    <h2>Welcome, thank you so much for joining our community of yogis! ✨</h2>
     <p>
-From energizing flows to restful resets, we’ve got you covered. Join our free in-person pop-ups, or unlock our full library of yoga and meditation classes with a premium subscription. 
+You've unlocked our full library of yoga and meditation classes with a premium subscription! You now have access to yoga and meditation classes as well as health & wellness tips. Take a breath, settle in, and explore what feels good for you today, we're so happy your here.  
     </p>
   </section>
 
@@ -118,13 +118,14 @@ From energizing flows to restful resets, we’ve got you covered. Join our free 
   <div class="wellness-row" tabindex="0">
     <!-- Lift -->
     <article class="wellness-card">
-      <a class="poster" href="login.html">
+      <a class="poster" href="https://available-tarsal-b72.notion.site/Yoga-with-Lisa-Exclusive-Full-Content-Library-2c06b96c132180b398dbc1d20c6f81f5">
         <img src="images/lift.jpg" alt="Lift">
       </a>
       <div class="meta">
         <h3>Lift</h3>
         <p>Energize your body with sculpt, pilates-infused, and strength-based flows.</p>
-        <a href="login.html">Lift, tone, & sculpt</a>
+        <a href="https://available-tarsal-b72.notion.site/Yoga-with-Lisa-Exclusive-Full-Content-Library-2c06b96c132180b398dbc1d20c6f81f5"
+           class="btn btn-pill btn-dark">Lift, tone, & sculpt</a>
       </div>
     </article>
 
