Add Signin page

--- a/login.html
+++ b/login.html
@@ -138,10 +138,34 @@
               <li>Members-only updates & resources</li>
               <li>Student & community discounts (when available)</li>
             </ul>
+
             <h3>Questions?</h3>
             <p>Email us at <a href="mailto:lisa@yogawithlisa.ai">lisa@yogawithlisa.ai</a> today.</p>
+
+            <div style="margin-top: 32px; text-align: left;">
+              <p style="margin-bottom: 10px; font-size: 0.95rem;">
+                Already a member?
+              </p>
+              <a
+                href="signin.html"
+                style="
+                  display: inline-block;
+                  padding: 0.8rem 2rem;
+                  border-radius: 999px;
+                  background:#000;
+                  color:#fff;
+                  text-decoration:none;
+                  font-size:0.95rem;
+                  text-align:center;
+                "
+              >
+                Sign In
+              </a>
+            </div>
           </aside>
+
 <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 10px; margin-top: 40px;">
+
   <a href="index.html" style="background:#000; color:#fff; padding:10px 18px; border-radius:20px; text-decoration:none; font-size:14px;">Back to Home</a>
   <a href="privacy.html" style="background:#000; color:#fff; padding:10px 18px; border-radius:20px; text-decoration:none; font-size:14px;">Privacy Policy</a>
   <a href="data-deletion.html" style="background:#000; color:#fff; padding:10px 18px; border-radius:20px; text-decoration:none; font-size:14px;">User Data Details</a>
