Update Signin Link

--- a/login.html
+++ b/login.html
@@ -159,7 +159,7 @@
                   text-align:center;
                 "
               >
-                Sign In
+                SIGN IN
               </a>
             </div>
           </aside>
