UGC content page

--- a/corporate.html
+++ b/corporate.html
@@ -59,7 +59,7 @@
         For <em> your</em> business.
       </h1>
         <a class="btn btn-dark btn-pill" href="#packages">VIEW PROGRAMS</a>
-        <a class="btn btn-dark btn-pill" href="#contact">REQUEST A QUOTE</a>
+        <a class="btn btn-dark btn-pill" href="mailto:lisa@yogawithlisa.ai?subject=Corporate%20Wellness%20Inquiry">REQUEST A QUOTE</a>
       </div>
     </div>
   </section>
