UGC content page updates

--- a/yoga-inperson.html
+++ b/yoga-inperson.html
@@ -233,7 +233,10 @@
           Join us in person to sweat, glow and grow. Designed to lift your body and your mood. All times are in Pacific Time.
         </p>
         <nav class="schedule-date-nav" aria-label="Upcoming dates">
+	  <a href="#jan8" class="date-pill">Jan 8</a>
           <a href="#dec13" class="date-pill">Dec 13</a>
+	  <a href="#dec12" class="date-pill">Dec 12</a>
+	  <a href="#dec5" class="date-pill">Dec 5</a>
           <a href="#nov21" class="date-pill">Nov 21</a>
           <a href="#nov15" class="date-pill">Nov 15</a>
           <a href="#oct18" class="date-pill">Oct 18</a>
@@ -257,10 +260,29 @@
           </tr>
         </thead>
         <tbody>
-          <!-- Dec 13 -->
+
+	  <!-- Jan 8 -->
+          <tr id="jan8">
+            <td class="schedule-date">Thursday, Jan 8th</td>
+            <td class="schedule-time">7:45 PM</td>
+            <td class="schedule-duration">60 min</td>
+            <td class="schedule-class">Vinyasa Flow</td>
+            <td class="schedule-instructor">Lisa</td>
+            <td class="schedule-location">Beach Glass Hot Yoga & Pilates</td>
+            <td class="schedule-cta">
+              <a class="btn btn-dark btn-pill schedule-btn"
+                 href="https://www.beachglasshyp.com/schedule"
+                 target="_blank" rel="noopener">
+                join
+              </a>
+            </td>
+          </tr>          
+
+
+	  <!-- Dec 13 -->
           <tr id="dec13">
             <td class="schedule-date">Saturday, Dec 13th</td>
-            <td class="schedule-time">11:00 AM</td>
+            <td class="schedule-time">1:00 PM</td>
             <td class="schedule-duration">60 min</td>
             <td class="schedule-class">Vinyasa Flow</td>
             <td class="schedule-instructor">Lisa & Brynn</td>
@@ -268,6 +290,40 @@
             <td class="schedule-cta">
               <a class="btn btn-dark btn-pill schedule-btn"
                  href="https://partiful.com/e/2aidGxGBVlRF2Q5FaXpf"
+                 target="_blank" rel="noopener">
+                join
+              </a>
+            </td>
+          </tr>
+
+          <!-- Dec 12 -->
+          <tr id="dec12">
+            <td class="schedule-date">Friday, Dec 12th</td>
+            <td class="schedule-time">1:00 PM</td>
+            <td class="schedule-duration">60 min</td>
+            <td class="schedule-class">Vinyasa Flow</td>
+            <td class="schedule-instructor">Lisa</td>
+            <td class="schedule-location">Beach Glass Hot Yoga & Pilates</td>
+            <td class="schedule-cta">
+              <a class="btn btn-dark btn-pill schedule-btn"
+                 href="https://www.beachglasshyp.com/schedule"
+                 target="_blank" rel="noopener">
+                join
+              </a>
+            </td>
+          </tr>
+
+<!-- Dec 5 -->
+          <tr id="dec5">
+            <td class="schedule-date">Friday, Dec 5th</td>
+            <td class="schedule-time">1:00 PM</td>
+            <td class="schedule-duration">60 min</td>
+            <td class="schedule-class">Vinyasa Flow</td>
+            <td class="schedule-instructor">Lisa</td>
+            <td class="schedule-location">Beach Glass Hot Yoga & Pilates</td>
+            <td class="schedule-cta">
+              <a class="btn btn-dark btn-pill schedule-btn"
+                 href="https://www.beachglasshyp.com/schedule"
                  target="_blank" rel="noopener">
                 join
               </a>
