UGC content page updates on Index

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
 <!-- Card 8 -->
     <article class="card">
-      <a class="card-link" href="https://yogawithlisaaiugcportfolio.my.canva.site/copy-of-copy-of-ugc-portfolio-neutral-theme">
+      <a class="card-link" href="ugc.html">
         <img class="card-img img-default" src="images/UGC-default.jpg" alt="UGC">
         <img class="card-img img-hover"   src="images/UGC-hover.jpg"   alt="" aria-hidden="true">
         <div class="card-cta"><span>UGC</span></div>
