UGC page debug 1

--- a/ugc.html
+++ b/ugc.html
@@ -43,10 +43,10 @@
   <!-- Header -->
   <header class="site-header">
     <div class="container nav-wrap">
-      <a class="brand" href="ugc.html">user generated content</a>     
+      <a class="brand" href="ugc.html">ugc with lisa</a>     
       <nav class="main-nav" aria-label="Primary">
         <ul>
-          <li><a href="login.html" class="login-btn">BACK TO YOGA</a></li>
+          <li><a href="www.lisaeshunwilson.com" class="login-btn">HOME</a></li>
         </ul>
       </nav>
     </div>
@@ -65,6 +65,11 @@
       </h1>
 
   <div class="ugc-social-icons">
+
+<a href="https://www.instagram.com/@ugcwithlisaeshunwilson" target="_blank" class="icon-btn">
+    <img src="images/icons/instagram.svg" alt="Instagram">
+  </a>
+
   <a href="https://www.tiktok.com/@yogawithlisa" target="_blank" class="icon-btn">
     <img src="images/icons/tiktok.svg" alt="TikTok">
   </a>
