Svg icon for instagram update

--- a/ugc.html
+++ b/ugc.html
@@ -43,10 +43,10 @@
   <!-- Header -->
   <header class="site-header">
     <div class="container nav-wrap">
-      <a class="brand" href="ugc.html">ugc with lisa</a>     
+      <a class="brand" href="ugc.html">lisa's ugc portfolio</a>     
       <nav class="main-nav" aria-label="Primary">
         <ul>
-          <li><a href="www.lisaeshunwilson.com" class="login-btn">HOME</a></li>
+          <li><a href="index.html" class="login-btn">HOME</a></li>
         </ul>
       </nav>
     </div>
@@ -241,10 +241,7 @@
     With a PhD in molecular biology + yoga teacher training, I bring credibility and integrity to wellness-focused brands.
 	</p>
     <p>
-      My natural-light, clean, minimalist aesthetic aligns with modern wellness, beauty, and lifestyle brands.
-    </p>
-    <p>
-      My natural-light, clean, minimalist aesthetic aligns with modern wellness, beauty, and modern-living brands. 
+      My natural-light, clean, minimalist aesthetic aligns with modern wellness, beauty, and modern-living. 
     </p>
     <p>
       Fast turnaround, clear communication, and content designed to convert, all while staying authentic to your brand voice.
