ugc page updates

--- a/ugc.html
+++ b/ugc.html
@@ -46,7 +46,7 @@
       <a class="brand" href="ugc.html">lisa's ugc portfolio</a>     
       <nav class="main-nav" aria-label="Primary">
         <ul>
-          <li><a href="index.html" class="login-btn">HOME</a></li>
+          <li><a href="mailto:lisaeshunwilson@gmail.com?subject=UGC%20Collaboration%20Inquiry" class="login-btn">LET'S CHAT</a></li>
         </ul>
       </nav>
     </div>
@@ -60,8 +60,8 @@
 
     <div class="hero-inner">
       <h1 class="display">
-  	<span class="nowrap">Promote <em>your</em> products today.</span><br/>
-  	And to your <em>dream</em> audience.  
+  	<span class="nowrap">Lisa Eshun-Wilson</span><br/>
+  	UGC Creator & Strategist | 📍 SF & LA   
       </h1>
 
   <div class="ugc-social-icons">
