ugc page updates description

--- a/ugc.html
+++ b/ugc.html
@@ -43,7 +43,7 @@
   <!-- Header -->
   <header class="site-header">
     <div class="container nav-wrap">
-      <a class="brand" href="ugc.html">lisa's ugc portfolio</a>     
+      <a class="brand" href="ugc.html">ugc with lisaeshunwilson</a>     
       <nav class="main-nav" aria-label="Primary">
         <ul>
           <li><a href="mailto:lisaeshunwilson@gmail.com?subject=UGC%20Collaboration%20Inquiry" class="login-btn">LET'S CHAT</a></li>
@@ -61,20 +61,20 @@
     <div class="hero-inner">
       <h1 class="display">
   	<span class="nowrap">Lisa Eshun-Wilson</span><br/>
-  	UGC Creator & Strategist | 📍 SF & LA   
+  	UGC Creator & Strategist   📍 SF & LA   
       </h1>
 
   <div class="ugc-social-icons">
 
-<a href="https://www.instagram.com/@ugcwithlisaeshunwilson" target="_blank" class="icon-btn">
+  <a href="https://www.instagram.com/ugcwithlisaeshunwilson" target="_blank" class="icon-btn">
     <img src="images/icons/instagram.svg" alt="Instagram">
   </a>
 
-  <a href="https://www.tiktok.com/@yogawithlisa" target="_blank" class="icon-btn">
+  <a href="https://www.tiktok.com/ugcwithlisaeshunwilson" target="_blank" class="icon-btn">
     <img src="images/icons/tiktok.svg" alt="TikTok">
   </a>
 
-  <a href="https://twitter.com/yogawithlisa" target="_blank" class="icon-btn">
+  <a href="https://twitter.com/ugcwithlisawilson" target="_blank" class="icon-btn">
     <img src="images/icons/x-twitter.svg" alt="Twitter/X">
   </a>
 
@@ -90,10 +90,9 @@
 
   <!-- Minimal Intro -->
   <section class="intro container">
-    <h2>Today is a beautiful day to make content.</h2>
+    <h2>Welcome to my UGC Portfolio!</h2>
     <p style="margin-bottom: 1.5em; line-height: 1.6; text-align: justify;">
-    Hi, I’m Lisa — a UGC creator and yoga instructor crafting content at the intersection of wellness, movement, and modern technology. I partner with brands in athletic wear, skincare, feminine wellness, travel gear, tech gadgets, and AI tools that genuinely elevate everyday life. My content blends authenticity, science-backed storytelling, and an eye for clean, calming visuals. Explore my featured work below. I’d love to collaborate.  
-    </p>
+      Check out my featured work below showcasing high-coverting videos trusted by brands like Navi Beauty, Alo, & Motion AI. Click on the first video so we can get properly introduced!</p>
   </section>
 
 <!-- Sticky taupe nav on scroll (diagnostic version) -->
@@ -235,17 +234,18 @@
   <div class="membership-inner container">
     <h2>Why work with me?</h2>
     <p>
-       Blend movement, wellness, and lifestyle to create content that feels calming, beautiful, and emotionally resonant.    
+    ✅ UGC Creator & Strategist | Create high-converting content that sells.     
     </p>
     <p>
-    With a PhD in molecular biology + yoga teacher training, I bring credibility and integrity to wellness-focused brands.
-	</p>
+    ✅ UGC Scriptwriter | Expert in storytelling & conversion tactics.</p>
     <p>
-      My natural-light, clean, minimalist aesthetic aligns with modern wellness, beauty, and modern-living. 
-    </p>
+    ✅ Worked with Top Brands | Navi Beauty, Mayura, Green Yogi, Beach Glass & more.</p>
     <p>
-      Fast turnaround, clear communication, and content designed to convert, all while staying authentic to your brand voice.
-    </p>
+    ✅ Results-driven | Focused on boosting conversions & engagement for short or long-form content.</p>
+    <p>
+    ✅ Psychology-Driven Marketing | Strong hooks, engaging edits, and retention tactics.</p>
+    <p>
+    ✅ Fast & Reliable | Quick turnaround with high-quality results.</p>
     <a class="btn btn-pill btn-outline" href="mailto:lisaeshunwilson@gmail.com?subject=UGC%20Collaboration%20Inquiry">LET'S CHAT</a>
   </div>
 </section>
@@ -254,7 +254,7 @@
 <section class="ig card" aria-label="Instagram">
   <div class="ig-head">
     <h3>you + lisa</h3>
-    <a class="btn btn-pill btn-outline" href="https://instagram.com/yogawithlisa.ai/" target="_blank" rel="noopener">
+    <a class="btn btn-pill btn-outline" href="https://instagram.com/ugcwithlisaeshunwilson/" target="_blank" rel="noopener">
       FIND US ON SOCIAL
     </a>
   </div>
@@ -265,10 +265,10 @@
     <div class="ig-track" id="igTrack">
       <!-- Replace these image paths with your own (local images or CDN) -->
       <a class="ig-card" href="#" aria-label="Instagram post 1">
-        <img src="images/ugc/ug1.jpg" alt="Yoga with Lisa — post 1" />
+        <img src="images/ug/ug1.jpg" alt="Yoga with Lisa — post 1" />
       </a>
       <a class="ig-card" href="#" aria-label="Instagram post 2">
-        <img src="images/ugc/ug2.jpg" alt="Yoga with Lisa — post 2" />
+        <img src="images/ug/ug2.jpg" alt="Yoga with Lisa — post 2" />
       </a>
       <a class="ig-card" href="#" aria-label="Instagram post 3">
         <img src="images/ug/ug3.jpg" alt="Yoga with Lisa — post 3" />
@@ -290,17 +290,26 @@
   <div class="founder-media" style="background-image:url('images/founder.jpg')"></div>
   <div class="founder-overlay"></div>
   <div class="founder-inner container">
-    <h2>meet the founder</h2>
-    <p>
-      Dr. Lisa Eshun-Wilson receieved her PhD in Molecular and Cell Biology from UC Berkeley and currently works at the intersection of biology and AI. She was born in Bergen, Norway, grew up in LA and now lives in the Bay Area. She loves to travel and has family all over the world, including the Czech Republic, Ghana, Norway, Australia, South Africa, and Canada. Her passion for science, health, travel and tech inspired her to not only <em>practice</em> yoga but also to <em>promote</em> products, tech and AI tools that support intentional and mindful living. Her mission? Create content that she is passionate about and showcases amazing products to the larger community.
-    </p>
-    <a class="btn btn-pill btn-outline" href="founder.html">LISA THE YOGI</a>
+    <h2>meet the creator</h2>
+      <p>
+    🐻 PhD in Molecular Biology 🧬 from UC Berkeley</p>
+      <p> 
+    🇳🇴 Born in Norway</p>
+      <p> 🧘🏿‍♀️
+    Certified Yoga Instructor</p>
+      <p>
+    Oldest of 6 siblings 👭</p>
+      <p>
+    SF Techie at heart 💻</p>
+      <p>
+    Smoothie Addict 🍓🍌⋆.˚</p>
+    <a class="btn btn-pill btn-outline" href="https://available-tarsal-b72.notion.site/Life-with-Lisa-e86714127b6143e1a6224f0e36011696">A LITTLE MORE ABOUT LISA</a>
   </div>
 </section>
 
   <footer class="site-footer">
     <div class="container">
-      <p>© <span id="y"></span> YOGA WITH LISA BY LISA ESHUN-WILSON & ASSOCIATES,LLC. / ALL RIGHTS RESERVED</p>
+      <p>© <span id="y"></span> UGC WITH LISA BY LISA ESHUN-WILSON & ASSOCIATES,LLC. / ALL RIGHTS RESERVED</p>
     </div>
   </footer>
 
