ugc hero update

--- a/ugc.html
+++ b/ugc.html
@@ -92,7 +92,7 @@
   <section class="intro container">
     <h2>Welcome to my UGC Portfolio!</h2>
     <p style="margin-bottom: 1.5em; line-height: 1.6; text-align: justify;">
-      Check out my featured work below showcasing high-coverting videos trusted by brands like Navi Beauty, Alo, & Motion AI. Click on the first video so we can get properly introduced!</p>
+      Check out my featured work below showcasing high-coverting videos trusted by brands like Navi Beauty, Alo, & Motion AI. Click on the intro video so we can get properly introduced!</p>
   </section>
 
 <!-- Sticky taupe nav on scroll (diagnostic version) -->
@@ -128,98 +128,107 @@
 </script>
 
 <!-- =================== UGC Phone Reel Strip =================== -->
-<section class="ugc-showcase container" aria-label="UGC video styles">
-  <h2 class="visually-hidden">UGC Video Styles</h2>
+<section class="ugc-reel" aria-label="UGC vertical samples">
+  <h2 class="visually-hidden">UGC Video Examples</h2>
 
-  <div class="ugc-reel-grid">
+  <div class="ugc-reel-row">
 
     <!-- YOGA -->
-    <article class="ugc-reel">
-      <div class="ugc-label">YOGA</div>
-      <div class="ugc-phone">
-        <!-- Replace src + poster with your yoga reel -->
-        <video class="ugc-video"
-               src="videos/ugc-yoga.mp4"
-               poster="images/ugc-yoga-poster.jpg"
-               playsinline
-               muted
-               controls>
-        </video>
-        <img src="images/phone-frame.png"
+    <article class="ugc-reel-item">
+      <h3 class="ugc-reel-label">YOGA</h3>
+      <div class="phone-shell">
+        <div class="phone-screen">
+          <video class="ugc-video"
+                 src="videos/ugc-yoga.mp4"
+                 poster="images/ugc-yoga-poster.jpg"
+                 playsinline
+                 muted
+                 controls>
+          </video>
+        </div>
+        <img class="phone-frame"
+             src="images/phone-frame-large-transparent.png"
              alt=""
-             class="ugc-phone-frame"
              aria-hidden="true">
       </div>
     </article>
 
     <!-- SKIN -->
-    <article class="ugc-reel">
-      <div class="ugc-label">SKIN</div>
-      <div class="ugc-phone">
-        <video class="ugc-video"
-               src="videos/ugc-skin.mp4"
-               poster="images/ugc-skin-poster.jpg"
-               playsinline
-               muted
-               controls>
-        </video>
-        <img src="images/phone-frame.png"
+    <article class="ugc-reel-item">
+      <h3 class="ugc-reel-label">SKIN</h3>
+      <div class="phone-shell">
+        <div class="phone-screen">
+          <video class="ugc-video"
+                 src="videos/ugc-skin.mp4"
+                 poster="images/ugc-skin-poster.jpg"
+                 playsinline
+                 muted
+                 controls>
+          </video>
+        </div>
+        <img class="phone-frame"
+             src="images/phone-frame-large-transparent.png"
              alt=""
-             class="ugc-phone-frame"
              aria-hidden="true">
       </div>
     </article>
 
     <!-- TRAVEL -->
-    <article class="ugc-reel">
-      <div class="ugc-label">TRAVEL</div>
-      <div class="ugc-phone">
-        <video class="ugc-video"
-               src="videos/ugc-travel.mp4"
-               poster="images/ugc-travel-poster.jpg"
-               playsinline
-               muted
-               controls>
-        </video>
-        <img src="images/phone-frame.png"
+    <article class="ugc-reel-item">
+      <h3 class="ugc-reel-label">TRAVEL</h3>
+      <div class="phone-shell">
+        <div class="phone-screen">
+          <video class="ugc-video"
+                 src="videos/ugc-travel.mp4"
+                 poster="images/ugc-travel-poster.jpg"
+                 playsinline
+                 muted
+                 controls>
+          </video>
+        </div>
+        <img class="phone-frame"
+             src="images/phone-frame-large-transparent.png"
              alt=""
-             class="ugc-phone-frame"
              aria-hidden="true">
       </div>
     </article>
 
     <!-- APPS -->
-    <article class="ugc-reel">
-      <div class="ugc-label">APPS</div>
-      <div class="ugc-phone">
-        <video class="ugc-video"
-               src="videos/ugc-apps.mp4"
-               poster="images/ugc-apps-poster.jpg"
-               playsinline
-               muted
-               controls>
-        </video>
-        <img src="images/phone-frame.png"
+    <article class="ugc-reel-item">
+      <h3 class="ugc-reel-label">APPS</h3>
+      <div class="phone-shell">
+        <div class="phone-screen">
+          <video class="ugc-video"
+                 src="videos/ugc-apps.mp4"
+                 poster="images/ugc-apps-poster.jpg"
+                 playsinline
+                 muted
+                 controls>
+          </video>
+        </div>
+        <img class="phone-frame"
+             src="images/phone-frame-large-transparent.png"
              alt=""
-             class="ugc-phone-frame"
              aria-hidden="true">
       </div>
     </article>
 
     <!-- HIKE -->
-    <article class="ugc-reel">
-      <div class="ugc-label">HIKE</div>
-      <div class="ugc-phone">
-        <video class="ugc-video"
-               src="videos/ugc-hike.mp4"
-               poster="images/ugc-hike-poster.jpg"
-               playsinline
-               muted
-               controls>
-        </video>
-        <img src="images/phone-frame.png"
+    <article class="ugc-reel-item">
+      <h3 class="ugc-reel-label">HIKE</h3>
+      <div class="phone-shell">
+        <div class="phone-screen">
+          <video class="ugc-video"
+                 src="videos/ugc-hike.mp4"
+                 poster="images/ugc-hike-poster.jpg"
+                 playsinline
+                 muted
+                 controls>
+          </video>
+        </div>
+        <img class="phone-frame"
+             src="images/phone-frame-large-transparent.png"
              alt=""
-             class="ugc-phone-frame"
              aria-hidden="true">
       </div>
     </article>
@@ -253,7 +262,7 @@
 <!-- =================== Instagram Carousel =================== -->
 <section class="ig card" aria-label="Instagram">
   <div class="ig-head">
-    <h3>you + lisa</h3>
+    <h3>your brand + lisa</h3>
     <a class="btn btn-pill btn-outline" href="https://instagram.com/ugcwithlisaeshunwilson/" target="_blank" rel="noopener">
       FIND US ON SOCIAL
     </a>
@@ -298,11 +307,11 @@
       <p> 🧘🏿‍♀️
     Certified Yoga Instructor</p>
       <p>
-    Oldest of 6 siblings 👭</p>
+    👭 Oldest of 6 siblings</p>
       <p>
-    SF Techie at heart 💻</p>
+    💻 SF Techie at heart</p>
       <p>
-    Smoothie Addict 🍓🍌⋆.˚</p>
+    🍓🍌 Smoothie Addict</p>
     <a class="btn btn-pill btn-outline" href="https://available-tarsal-b72.notion.site/Life-with-Lisa-e86714127b6143e1a6224f0e36011696">A LITTLE MORE ABOUT LISA</a>
   </div>
 </section>
