ugc video carousel

--- a/ugc.html
+++ b/ugc.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- Adobe Fonts -->
   <link rel="stylesheet" href="https://use.typekit.net/uwl6zhw.css">
-  <title>Yoga with Lisa</title>
+  <title>UGC with Lisa</title>
   
 <!-- Favicons -->
 <link rel="icon" href="/favicon.ico" sizes="any"> <!-- classic fallback -->
@@ -43,10 +43,10 @@
   <!-- Header -->
   <header class="site-header">
     <div class="container nav-wrap">
-      <a class="brand" href="ugc.html">ugc with lisaeshunwilson</a>     
+      <a class="brand" href="ugc.html">ugc with lisa</a>     
       <nav class="main-nav" aria-label="Primary">
         <ul>
-          <li><a href="mailto:lisaeshunwilson@gmail.com?subject=UGC%20Collaboration%20Inquiry" class="login-btn">LET'S CHAT</a></li>
+          <li><a href="mailto:lisaeshunwilson@gmail.com?subject=UGC%20Collaboration%20Inquiry" class="login-btn">CHAT</a></li>
         </ul>
       </nav>
     </div>
@@ -61,7 +61,7 @@
     <div class="hero-inner">
       <h1 class="display">
   	<span class="nowrap">Lisa Eshun-Wilson</span><br/>
-  	UGC Creator & Strategist 📍SF & LA   
+  	<span class="nowrap">UGC Creator</span><br/> 📍 SF & LA   
       </h1>
 
   <div class="ugc-social-icons">
@@ -133,9 +133,31 @@
 
   <div class="ugc-reel-row">
 
-    <!-- YOGA -->
+<!-- intro -->
     <article class="ugc-reel-item">
-      <h3 class="ugc-reel-label">YOGA</h3>
+      <h3 class="ugc-reel-label">intro</h3>
+      <div class="phone-shell">
+        <div class="phone-screen">
+          <video class="ugc-video"
+                 src="videos/ugc-intro.mp4"
+                 poster="images/ugc-intro-poster.jpg"
+                 playsinline
+                 muted
+                 controls>
+          </video>
+        </div>
+        <img class="phone-frame"
+             src="images/phone-frame-large-transparent.png"
+             alt=""
+             aria-hidden="true">
+      </div>
+    </article>
+
+
+    <!-- B-Roll -->
+    <article class="ugc-reel-item">
+      <h3 class="ugc-reel-label">b-roll w/vo</h3>
+      <h3 class="ugc-reel-label">althletic wear</h3>
       <div class="phone-shell">
         <div class="phone-screen">
           <video class="ugc-video"
@@ -153,9 +175,10 @@
       </div>
     </article>
 
-    <!-- SKIN -->
+    <!-- product demo -->
     <article class="ugc-reel-item">
-      <h3 class="ugc-reel-label">SKIN</h3>
+      <h3 class="ugc-reel-label">product demo</h3>
+      <h3 class="ugc-reel-label">lip care</h3>
       <div class="phone-shell">
         <div class="phone-screen">
           <video class="ugc-video"
@@ -173,9 +196,31 @@
       </div>
     </article>
 
-    <!-- TRAVEL -->
+    <!-- educational -->
     <article class="ugc-reel-item">
-      <h3 class="ugc-reel-label">TRAVEL</h3>
+      <h3 class="ugc-reel-label">educational</h3>
+      <h3 class="ugc-reel-label">AI app</h3>
+      <div class="phone-shell">
+        <div class="phone-screen">
+          <video class="ugc-video"
+                 src="videos/apps-travel.mp4"
+                 poster="images/ugc-apps-poster.jpg"
+                 playsinline
+                 muted
+                 controls>
+          </video>
+        </div>
+        <img class="phone-frame"
+             src="images/phone-frame-large-transparent.png"
+             alt=""
+             aria-hidden="true">
+      </div>
+    </article>
+
+    <!-- skit -->
+    <article class="ugc-reel-item">
+      <h3 class="ugc-reel-label">skit</h3>
+      <h3 class="ugc-reel-label">travel containers</h3>
       <div class="phone-shell">
         <div class="phone-screen">
           <video class="ugc-video"
@@ -193,29 +238,10 @@
       </div>
     </article>
 
-    <!-- APPS -->
+    <!-- testomonial -->
     <article class="ugc-reel-item">
-      <h3 class="ugc-reel-label">APPS</h3>
-      <div class="phone-shell">
-        <div class="phone-screen">
-          <video class="ugc-video"
-                 src="videos/ugc-apps.mp4"
-                 poster="images/ugc-apps-poster.jpg"
-                 playsinline
-                 muted
-                 controls>
-          </video>
-        </div>
-        <img class="phone-frame"
-             src="images/phone-frame-large-transparent.png"
-             alt=""
-             aria-hidden="true">
-      </div>
-    </article>
-
-    <!-- HIKE -->
-    <article class="ugc-reel-item">
-      <h3 class="ugc-reel-label">HIKE</h3>
+      <h3 class="ugc-reel-label">testimonial</h3>
+      <h3 class="ugc-reel-label">hiking gear</h3>
       <div class="phone-shell">
         <div class="phone-screen">
           <video class="ugc-video"
