ugc signup page

--- a/login.html
+++ b/login.html
@@ -98,7 +98,7 @@
 	<div class="plan-stack">
 
 <a class="btn btn-pill btn-dark btn-wide"
-   href="free-members.html">Join our Mailing List</a>
+   href="signup.html">Join our Mailing List</a>
 
 <a class="btn btn-pill btn-dark btn-wide" 
    href="https://buy.stripe.com/bJefZi3fB4ICalL1de2Ji00">Subscribe Now | Monthly Plan – $16.99/mo</a>
