test links for signin via memberstack

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   	Awaken your <em>inner</em> yogi.  
       </h1>
   <div class="hero-ctas">
-        <a class="btn btn-dark btn-pill" href="login.html">START YOUR FREE TRIAL TODAY</a>
+        <a class="btn btn-dark btn-pill" href="signup.html">START YOUR FREE TRIAL TODAY</a>
       <a class="btn btn-dark btn-pill btn-wide"
      href="https://join.slack.com/t/yogawithlisa/shared_invite/zt-3ftkru3hx-wlWSt1RYzyfNVIt0LK1HXA"
      target="_blank" rel="noopener">
@@ -78,7 +78,7 @@
   <section class="intro container">
     <h2>Let's flow.</h2>
     <p style="margin-bottom: 1.5em; line-height: 1.6; text-align: justify;">
-    Hi I'm Lisa! A certified yoga teacher from Los Angeles, CA. Yoga with Lisa is a digital wellness platform that features personalized yoga classes, meditations, and nutrition all in one place — adapting to your body, your cycle, and your lifestyle in real time.  
+    Hi I'm Lisa! A certified yoga teacher from Los Angeles, CA. Yoga with Lisa is a digital wellness platform that features personalized yoga classes, meditations, nutrition & lifestyle tips all in one place — adapting to your body, your cycle, and your lifestyle in real time.  
     </p>
   </section>
 
@@ -206,7 +206,7 @@
   <div class="membership-inner container">
     <h2>membership perks</h2>
     <p>
-      + Full access to workout library, featuring yoga sculpt, vinyasa, ashtanga, yin & more!    
+      + Full access to workout library, featuring hatha, vinyasa, & ashtanga yoga classes!    
     </p>
     <p>
       + New videos published every month. 
