--- a/login.html
+++ b/login.html
@@ -98,15 +98,16 @@
 	<div class="plan-stack">
 
 <a class="btn btn-pill btn-dark btn-wide"
-   href="signup.html">Join our Mailing List</a>
+   href="signin.html">Join our Mailing List</a>
 
 <a class="btn btn-pill btn-dark btn-wide" 
-   href="https://buy.stripe.com/bJefZi3fB4ICalL1de2Ji00">Subscribe Now | Monthly Plan – $16.99/mo</a>
+   href="#"
+   data-ms-price:add="prc_premium-monthly-plan-cklp04n5">Subscribe Now | Monthly Plan – $16.99/mo</a>
 
 <a class="btn btn-pill btn-dark btn-wide" 
-   href="https://buy.stripe.com/9B6cN65nJ0smeC1aNO2Ji01">Subscribe Now | Annual Plan – $169.99/year</a>
+   href="#" data-ms-price:add="prc_premium-annual--felk04yk">Subscribe Now | Annual Plan – $169.99/year</a>
 
-<!-- Tokens / Crypto -->
+<!-- Venmo Donation -->
 <a class="btn btn-pill btn-dark btn-wide"
    href="https://venmo.com/code?user_id=4476070791219179164&created=1764358269.647224&printed=1"
    target="_blank" rel="noopener noreferrer">
