--- a/signup.html
+++ b/signup.html
@@ -121,12 +121,12 @@
     <div class="left">
       <h1>Yoga with Lisa</h1>
       <p>
-        A science-backed, cycle‑synced yoga and wellness membership.
+        Join our community of dedicated yogis. Your transformation awaits. 
       </p>
       <ul>
-        <li>On‑demand yoga & meditation</li>
-        <li>Cycle‑aware monthly programming</li>
-        <li>Members‑only library</li>
+        <li>On‑demand yoga & meditation classes.</li>
+        <li>Gluten-free & heart healthy meal plans.</li>
+        <li>Questions? Email lisa@yogawithlisa.ai today.</li>
       </ul>
     </div>
 
