--- a/yoga-inperson.html
+++ b/yoga-inperson.html
@@ -233,7 +233,10 @@
           Join us in person to sweat, glow and grow. Designed to lift your body and your mood. All times are in Pacific Time.
         </p>
         <nav class="schedule-date-nav" aria-label="Upcoming dates">
+	  <a href="#jan12" class="date-pill">Jan 12</a>
 	  <a href="#jan8" class="date-pill">Jan 8</a>
+          <a href="#jan6" class="date-pill">Jan 6</a>
+	  <a href="#jan5" class="date-pill">Jan 5</a>
           <a href="#dec13" class="date-pill">Dec 13</a>
 	  <a href="#dec12" class="date-pill">Dec 12</a>
 	  <a href="#dec5" class="date-pill">Dec 5</a>
@@ -261,6 +264,23 @@
         </thead>
         <tbody>
 
+	  <!-- Jan 12 -->
+          <tr id="jan12">
+            <td class="schedule-date">Friday, Jan 12th</td>
+            <td class="schedule-time">1:00 PM</td>
+            <td class="schedule-duration">60 min</td>
+            <td class="schedule-class">Vinyasa Flow</td>
+            <td class="schedule-instructor">Lisa</td>
+            <td class="schedule-location">Beach Glass Hot Yoga & Pilates</td>
+            <td class="schedule-cta">
+              <a class="btn btn-dark btn-pill schedule-btn"
+                 href="https://www.beachglasshyp.com/schedule"
+                 target="_blank" rel="noopener">
+                join
+              </a>
+            </td>
+          </tr>
+
 	  <!-- Jan 8 -->
           <tr id="jan8">
             <td class="schedule-date">Thursday, Jan 8th</td>
@@ -278,6 +298,39 @@
             </td>
           </tr>          
 
+          <!-- Jan 6 -->
+          <tr id="jan6">
+            <td class="schedule-date">Tuesday, Jan 6th</td>
+            <td class="schedule-time">4:30 PM</td>
+            <td class="schedule-duration">60 min</td>
+            <td class="schedule-class">Vinyasa Flow</td>
+            <td class="schedule-instructor">Lisa</td>
+            <td class="schedule-location">Green Yogi Telegraph</td>
+            <td class="schedule-cta">
+              <a class="btn btn-dark btn-pill schedule-btn"
+                 href="https://partiful.com/e/bMY1KIJ8QG5wCGZ3VtnM"
+                 target="_blank" rel="noopener">
+                join
+              </a>
+            </td>
+          </tr>"
+          
+          <!-- Jan 5 -->
+          <tr id="jan5">
+            <td class="schedule-date">Friday, Jan 5th</td>
+            <td class="schedule-time">1:00 PM</td>
+            <td class="schedule-duration">60 min</td>
+            <td class="schedule-class">Vinyasa Flow</td>
+            <td class="schedule-instructor">Lisa</td>
+            <td class="schedule-location">Beach Glass Hot Yoga & Pilates</td>
+            <td class="schedule-cta">
+              <a class="btn btn-dark btn-pill schedule-btn"
+                 href="https://www.beachglasshyp.com/schedule"
+                 target="_blank" rel="noopener">
+                join
+              </a>
+            </td>
+          </tr>
 
 	  <!-- Dec 13 -->
           <tr id="dec13">
